# ollama_code

./: Cargo.toml  LICENSE  Modelfile  README.md
src/: app.rs  assistant.rs  constants.rs  main.rs  ollama.rs  otel.rs  preflight_ui.rs  tools.rs
src/ui/: mod.rs
