[package]

name = "ollama_code"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
cli-prompts = "0.1.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
reqwest-streams = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }     # optional: async runtime
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-error = "0.2"
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tonic", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = [
  "rt-tokio",
  "tokio",
  "opentelemetry-http",
] }
tonic = "0.12.3"
opentelemetry-appender-tracing = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
